# snap-xcompile

./: .gitignore  README.md  arm64_cfn.yaml  arm64_compile.sh  arm64_snapcraft.sh  arm64_xcompile.sh  buildspec.yaml  delete_me.sh  ec2.sh  snap_xcompile.sh  snap_xcompile.yaml
assets/: workflow.drawio
examples/ros_hello_world/: snap_xcompile.sh  snap_xcompile.yaml
examples/ros_hello_world/src/hello_world/nodes/: broadcast.py
snap/: snapcraft.yaml
src/: snap_xcompile.sh  snap_xcompile.yaml  sxc.sh  sxc.yaml
src/hello_world/: CMakeLists.txt  package.xml
src/hello_world/launch/: broadcast.launch  hello_world.launch
src/hello_world/nodes/: talker.py
xcompile/: arm64_cfn.yaml  arm64_compile.sh  arm64_xcompile.sh
