<?xml version="1.0"?>
<package format="2">
  <name>hello_world</name>
  <version>0.1.0</version>
  <description>Continuously publishes a message to the /broadcast topic</description>

  <maintainer email="adsnghw@amazon.com">Adi Singh</maintainer>
  <author email="adsnghw@amazon.com">Adi Singh</author>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export></export>
</package>
